--- a/bin/init-folder/snowie.build.json
+++ b/bin/init-folder/snowie.build.json
@@ -7,6 +7,7 @@
     "markup": "md",
     "out": "output",
     "in": "index.md",
+    "files": "./files",
     "links": [
         "Basic-Snowie-Markdown-file"
     ]
