added code block

--- a/docs/snowie.build.json
+++ b/docs/snowie.build.json
@@ -9,6 +9,7 @@
     "in": "documentation.md",
     "files": "./files",
     "links": [
-        "Introduction"
+        "Introduction",
+        "basics"
     ]
 }
