--- a/docs/snowie.build.json
+++ b/docs/snowie.build.json
@@ -11,6 +11,8 @@
     "links": [
         "Introduction",
         "basics",
-        "cli"
+        "cli",
+        "Build-Config",
+        "options"
     ]
 }
