added some features

--- a/bin/init-folder/snowie.build.json
+++ b/bin/init-folder/snowie.build.json
@@ -6,6 +6,7 @@
     "render_engine": "md",
     "markup": "md",
     "out": "output",
+    "out_name": "index",
     "in": "index.md",
     "files": "./files",
     "links": [
